FIX: in additional nav in explore page added gaps on mobile

--- a/src/styles/_explore.scss
+++ b/src/styles/_explore.scss
@@ -64,6 +64,14 @@
     justify-content: flex-start;
   }
 
+  .explore-page & {
+
+    @include media-breakpoint-down($desktop-breakpoint-dcrs) {
+      padding-left: 8px;
+      padding-right: 8px;
+    }
+  }
+
   .searchView & {
 
     @include media-breakpoint-down($desktop-breakpoint-dcrs) {
